fix splash look on firefox

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -94,7 +94,7 @@
    width:500px;
    text-align: center;
    top:30%;
-   left:30%;
+   left:35%;
  }
 
  .intro-message{
